# AIMedicalscriberjas

./: .env  .env.example  .gitignore  .railwayignore  .read  .replit  AIMS_COMPREHENSIVE_IMPROVEMENT_PLAN.md  AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONCURRENT_USERS_CAPACITY.md  CONTINUOUS_VOICE_INTAKE_GUIDE.md  DEPLOYMENT_FIXES_COMPLETE.md  ENV_SETUP_GUIDE.md  FREE_HIPAA_IMPLEMENTATION_GUIDE.md  GEMINI_HYBRID_INTEGRATION_GUIDE.md  GITHUB_PUSH_INSTRUCTIONS.md  GOOGLE_GEMINI_VISION_MEDICAL_CAPABILITIES.md  HIPAA_COMPLIANCE_GUIDE.md  HIPAA_QUICK_REFERENCE.md  HIPAA_SECURITY_REQUIREMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2024-12-23.md  INTAKE_FORM_FIXES.md  INTAKE_V2_WORKFLOW.md  INTAKE_VOICE_WORKFLOW.md  MOBILE_FIXES_SUMMARY.md  NOTIFICATION_SYSTEM_SETUP.md  OPENAI_VS_GEMINI_COMPARISON.md  PERFORMANCE_OPTIMIZATIONS_APPLIED.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCTION_FIXES_DETAILED.md  PRODUCTION_INTAKE_GUIDE.md  PRODUCTION_READY.md  PRODUCTION_READY_SUMMARY.md  QUICK_DEPLOY_GUIDE.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  RAILWAY_TROUBLESHOOTING.md  README.md  (+31 more)
api/: index.ts
attached_assets/: Pasted--1-Core-Functionalities-Device-Integration-Ensure-seamless-Bluetooth-connectivity-with-FDA-cle-1745986949189.txt  Pasted-AI-Powered-Medical-Subscriber-Platform-Frontend-Documentation-Overview-Here-s-a-concise-summar-1741392513058.txt  Pasted-AI-Powered-Medical-Subscriber-Platform-Frontend-Documentation-Overview-The-AI-Powered-Medical-Su-1741392522153.txt  (+5 more)
demo/: App.css  App.tsx  index.css  (+1 more)
(+167 files in other folders)
